/*
Copyright 2022 The Numaproj Authors.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

syntax = "proto3";

option go_package = "github.com/numaproj/numaflow-go/pkg/apis/proto/serving/v1";
option java_package = "io.numaproj.numaflow.serving.v1";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

package map.v1;

service ServingStore {
  rpc Put(PutRequest) returns (PutResponse);

  rpc Get(GetRequest) returns (GetResponse);

  rpc IsReady(google.protobuf.Empty) returns (ReadyResponse);
}

message Payload {
  string id = 1;
  bytes value = 2;
}


message PutRequest {
  repeated Payload payload = 1;
}

message PutResponse {
  bool success = 1;
}

message GetRequest {
  string id = 1;
}

message GetResponse {
  repeated Payload payload = 1;
}

/**
 * ReadyResponse is the health check result.
 */
message ReadyResponse {
  bool ready = 1;
}